StrLang/src/grammar/StrLangParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g 2012-05-05 22:39:15

	package grammar;
	import java.io.*;
	import namestable.*;
	import java.util.ArrayList;
	import org.antlr.runtime.*;
	import namestable.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class StrLangParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "ASSIGN_OP", "PLUS_OP", "MINUS_OP", "DOUBLE_MINUS", "DOUBLE_PLUS", "INT", "LINE", "SYMBOL", "EQUALLY_EQL_OP", "MORE_EQL_OP", "LESS_EQL_OP", "MORE_OP", "LESS_OP", "NO_EQUALLY", "END_LINE", "LINE_TYPE", "INT_TYPE", "SYMBOL_TYPE", "VOID_TYPE", "COMMENT", "WS", "'main'", "'{'", "'}'", "','", "'('", "')'", "'WriteToFile'", "'ReadFile'", "'while'", "'for'", "';'", "'print'", "'length'", "'elem'", "'break'", "'return'", "'if'", "'else'", "'and'", "'or'"
    };
    public static final int EOF=-1;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int ID=4;
    public static final int ASSIGN_OP=5;
    public static final int PLUS_OP=6;
    public static final int MINUS_OP=7;
    public static final int DOUBLE_MINUS=8;
    public static final int DOUBLE_PLUS=9;
    public static final int INT=10;
    public static final int LINE=11;
    public static final int SYMBOL=12;
    public static final int EQUALLY_EQL_OP=13;
    public static final int MORE_EQL_OP=14;
    public static final int LESS_EQL_OP=15;
    public static final int MORE_OP=16;
    public static final int LESS_OP=17;
    public static final int NO_EQUALLY=18;
    public static final int END_LINE=19;
    public static final int LINE_TYPE=20;
    public static final int INT_TYPE=21;
    public static final int SYMBOL_TYPE=22;
    public static final int VOID_TYPE=23;
    public static final int COMMENT=24;
    public static final int WS=25;

    // delegates
    // delegators


        public StrLangParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public StrLangParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return StrLangParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g"; }


    	protected NamesTable names = new NamesTable();
    	protected ArrayList<String> errors = new ArrayList<String>();
    	protected ArrayList<String> tmpVarNamesList = new ArrayList<String>();

    	/**
    	 * @param args
    	 */
    	public static void main(String[] args) throws Exception {
    		// TODO Auto-generated method stub
    		
    		StrLangLexer lexer = new StrLangLexer(new ANTLRFileStream(args[0]));
    		StrLangParser parser = new StrLangParser(new CommonTokenStream(lexer));
    		parser.program();
    		if(!parser.errors.isEmpty())
    		{
    			System.out.println("Found "+parser.errors.size()+" errors:");
    			for(String m: parser.errors)
    				System.out.println(m);
    			System.out.println("Compiled not successfully");
    		}
    		else
    			System.out.println("Compiled successfully");
    		
    	}
    	
    	public String getErrorHeader(RecognitionException e)
    	{
    		return "line "+e.line+":";
    	}
    	
    	public void emitErrorMessage(String msg)
    	{
    		errors.add(msg);
    	}


    protected static class program_scope {
        String curBlock;
    }
    protected Stack program_stack = new Stack();


    // $ANTLR start "program"
    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:57:1: program : ( global_decl )? mainBlock ;
    public final void program() throws RecognitionException {
        program_stack.push(new program_scope());

        	((program_scope)program_stack.peek()).curBlock = "";

        try {
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:64:2: ( ( global_decl )? mainBlock )
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:64:4: ( global_decl )? mainBlock
            {
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:64:4: ( global_decl )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==ID||(LA1_0>=LINE_TYPE && LA1_0<=VOID_TYPE)) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:64:4: global_decl
                    {
                    pushFollow(FOLLOW_global_decl_in_program50);
                    global_decl();

                    state._fsp--;


                    }
                    break;

            }

            ((program_scope)program_stack.peek()).curBlock ="main";
            pushFollow(FOLLOW_mainBlock_in_program55);
            mainBlock();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            program_stack.pop();
        }
        return ;
    }
    // $ANTLR end "program"


    // $ANTLR start "mainBlock"
    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:67:1: mainBlock : 'main' '{' ( body )* '}' ;
    public final void mainBlock() throws RecognitionException {
        try {
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:67:10: ( 'main' '{' ( body )* '}' )
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:68:3: 'main' '{' ( body )* '}'
            {
            match(input,26,FOLLOW_26_in_mainBlock68); 
            match(input,27,FOLLOW_27_in_mainBlock70); 
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:68:14: ( body )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==ID||(LA2_0>=LINE_TYPE && LA2_0<=VOID_TYPE)||(LA2_0>=32 && LA2_0<=35)||(LA2_0>=37 && LA2_0<=40)||LA2_0==42) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:68:14: body
            	    {
            	    pushFollow(FOLLOW_body_in_mainBlock72);
            	    body();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            match(input,28,FOLLOW_28_in_mainBlock75); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "mainBlock"


    // $ANTLR start "global_decl"
    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:71:1: global_decl : ( global_var | global_func )+ ;
    public final void global_decl() throws RecognitionException {
        try {
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:72:2: ( ( global_var | global_func )+ )
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:73:2: ( global_var | global_func )+
            {
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:73:2: ( global_var | global_func )+
            int cnt3=0;
            loop3:
            do {
                int alt3=3;
                int LA3_0 = input.LA(1);

                if ( ((LA3_0>=LINE_TYPE && LA3_0<=VOID_TYPE)) ) {
                    int LA3_2 = input.LA(2);

                    if ( (LA3_2==ID) ) {
                        int LA3_4 = input.LA(3);

                        if ( ((LA3_4>=ID && LA3_4<=MINUS_OP)||(LA3_4>=LINE_TYPE && LA3_4<=VOID_TYPE)||LA3_4==26||LA3_4==29) ) {
                            alt3=1;
                        }
                        else if ( (LA3_4==30) ) {
                            alt3=2;
                        }


                    }


                }
                else if ( (LA3_0==ID) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:73:3: global_var
            	    {
            	    pushFollow(FOLLOW_global_var_in_global_decl90);
            	    global_var();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:73:16: global_func
            	    {
            	    pushFollow(FOLLOW_global_func_in_global_decl94);
            	    global_func();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "global_decl"


    // $ANTLR start "global_var"
    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:76:1: global_var : variables ;
    public final void global_var() throws RecognitionException {
        try {
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:77:2: ( variables )
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:77:4: variables
            {
             ((program_scope)program_stack.peek()).curBlock = "global";
            pushFollow(FOLLOW_variables_in_global_var110);
            variables();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "global_var"


    // $ANTLR start "func"
    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:80:1: func : ( inside_func | call_func );
    public final void func() throws RecognitionException {
        try {
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:81:2: ( inside_func | call_func )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( ((LA4_0>=32 && LA4_0<=33)||(LA4_0>=37 && LA4_0<=40)) ) {
                alt4=1;
            }
            else if ( (LA4_0==ID) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:81:4: inside_func
                    {
                    pushFollow(FOLLOW_inside_func_in_func121);
                    inside_func();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:82:4: call_func
                    {
                    pushFollow(FOLLOW_call_func_in_func126);
                    call_func();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "func"

    protected static class variables_scope {
        String varType;
    }
    protected Stack variables_stack = new Stack();


    // $ANTLR start "variables"
    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:85:1: variables : ( decl_var | init_var );
    public final void variables() throws RecognitionException {
        variables_stack.push(new variables_scope());

        	((variables_scope)variables_stack.peek()).varType = "";

        try {
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:92:2: ( decl_var | init_var )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( ((LA5_0>=LINE_TYPE && LA5_0<=VOID_TYPE)) ) {
                alt5=1;
            }
            else if ( (LA5_0==ID) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:92:3: decl_var
                    {
                    pushFollow(FOLLOW_decl_var_in_variables143);
                    decl_var();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:93:3: init_var
                    {
                    pushFollow(FOLLOW_init_var_in_variables147);
                    init_var();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            variables_stack.pop();
        }
        return ;
    }
    // $ANTLR end "variables"


    // $ANTLR start "decl_var"
    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:96:1: decl_var : type variableDeclarators ;
    public final void decl_var() throws RecognitionException {
        StrLangParser.type_return type1 = null;


        try {
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:97:2: ( type variableDeclarators )
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:97:4: type variableDeclarators
            {
            pushFollow(FOLLOW_type_in_decl_var159);
            type1=type();

            state._fsp--;


            		((variables_scope)variables_stack.peek()).varType = (type1!=null?input.toString(type1.start,type1.stop):null);
            	
            pushFollow(FOLLOW_variableDeclarators_in_decl_var165);
            variableDeclarators();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "decl_var"


    // $ANTLR start "variableDeclarators"
    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:104:1: variableDeclarators : variableDeclarator ( ',' variableDeclarator )* ;
    public final void variableDeclarators() throws RecognitionException {
        try {
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:105:2: ( variableDeclarator ( ',' variableDeclarator )* )
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:105:4: variableDeclarator ( ',' variableDeclarator )*
            {
            pushFollow(FOLLOW_variableDeclarator_in_variableDeclarators177);
            variableDeclarator();

            state._fsp--;

            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:105:23: ( ',' variableDeclarator )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==29) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:105:24: ',' variableDeclarator
            	    {
            	    match(input,29,FOLLOW_29_in_variableDeclarators180); 
            	    pushFollow(FOLLOW_variableDeclarator_in_variableDeclarators182);
            	    variableDeclarator();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "variableDeclarators"

    protected static class variableDeclarator_scope {
        ArrayList<String> varList;
    }
    protected Stack variableDeclarator_stack = new Stack();


    // $ANTLR start "variableDeclarator"
    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:108:1: variableDeclarator : ID ( ASSIGN_OP firstAssign= spec_type )? ( ( PLUS_OP | MINUS_OP ) secondAssign= spec_type )* ;
    public final void variableDeclarator() throws RecognitionException {
        variableDeclarator_stack.push(new variableDeclarator_scope());
        Token ID2=null;
        String firstAssign = null;

        String secondAssign = null;



        	((variableDeclarator_scope)variableDeclarator_stack.peek()).varList = new ArrayList<String>();

        try {
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:115:2: ( ID ( ASSIGN_OP firstAssign= spec_type )? ( ( PLUS_OP | MINUS_OP ) secondAssign= spec_type )* )
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:115:4: ID ( ASSIGN_OP firstAssign= spec_type )? ( ( PLUS_OP | MINUS_OP ) secondAssign= spec_type )*
            {
            ID2=(Token)match(input,ID,FOLLOW_ID_in_variableDeclarator203); 

            		if(!names.isDeclaredVariable(((program_scope)program_stack.peek()).curBlock+"."+(ID2!=null?ID2.getText():null)))
            		{
            			names.addVariable(names.new VariableName(((program_scope)program_stack.peek()).curBlock+"."+(ID2!=null?ID2.getText():null), ((variables_scope)variables_stack.peek()).varType, (ID2!=null?ID2.getLine():0)));
            		}
            		else
            		{
            			if(names.isDeclaredVariable(((program_scope)program_stack.peek()).curBlock+"."+(ID2!=null?ID2.getText():null)))
            				errors.add("line "+(ID2!=null?ID2.getLine():0)+": Duplicated variable name "+(ID2!=null?ID2.getText():null));
            		}
            	
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:128:2: ( ASSIGN_OP firstAssign= spec_type )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==ASSIGN_OP) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:129:3: ASSIGN_OP firstAssign= spec_type
                    {
                    match(input,ASSIGN_OP,FOLLOW_ASSIGN_OP_in_variableDeclarator215); 
                    pushFollow(FOLLOW_spec_type_in_variableDeclarator219);
                    firstAssign=spec_type();

                    state._fsp--;


                    			if(!TypesChecker.checkTypes(((variables_scope)variables_stack.peek()).varType, firstAssign))
                    			{
                    				errors.add("line "+(ID2!=null?ID2.getLine():0)+": Type mismatch: cannot convert from "+((variables_scope)variables_stack.peek()).varType+" to "+firstAssign);
                    			}
                    		

                    }
                    break;

            }

            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:137:2: ( ( PLUS_OP | MINUS_OP ) secondAssign= spec_type )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( ((LA8_0>=PLUS_OP && LA8_0<=MINUS_OP)) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:137:3: ( PLUS_OP | MINUS_OP ) secondAssign= spec_type
            	    {
            	    if ( (input.LA(1)>=PLUS_OP && input.LA(1)<=MINUS_OP) ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_spec_type_in_variableDeclarator239);
            	    secondAssign=spec_type();

            	    state._fsp--;


            	    			if(!TypesChecker.checkTypes(((variables_scope)variables_stack.peek()).varType, secondAssign))
            	    			{
            	    				errors.add("line "+(ID2!=null?ID2.getLine():0)+": Type mismatch: cannot convert from "+((variables_scope)variables_stack.peek()).varType+" to "+secondAssign);
            	    			}
            	    		

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            variableDeclarator_stack.pop();
        }
        return ;
    }
    // $ANTLR end "variableDeclarator"


    // $ANTLR start "init_var"
    // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:148:1: init_var : ID ASSIGN_OP firstAssign= spec_type ( ( PLUS_OP | MINUS_OP ) secondAssign= spec_type )* ;
    public final void init_var() throws RecognitionException {
        Token ID3=null;
        String firstAssign = null;

        String secondAssign = null;


        try {
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:149:2: ( ID ASSIGN_OP firstAssign= spec_type ( ( PLUS_OP | MINUS_OP ) secondAssign= spec_type )* )
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:149:4: ID ASSIGN_OP firstAssign= spec_type ( ( PLUS_OP | MINUS_OP ) secondAssign= spec_type )*
            {
            ID3=(Token)match(input,ID,FOLLOW_ID_in_init_var261); 
            match(input,ASSIGN_OP,FOLLOW_ASSIGN_OP_in_init_var263); 
            pushFollow(FOLLOW_spec_type_in_init_var267);
            firstAssign=spec_type();

            state._fsp--;


            		if(names.isDeclaredVariable(((program_scope)program_stack.peek()).curBlock+"."+(ID3!=null?ID3.getText():null)))
            		{
            			NamesTable.VariableName var_type = names.getVariable(((program_scope)program_stack.peek()).curBlock+"."+(ID3!=null?ID3.getText():null));
            			((variables_scope)variables_stack.peek()).varType = var_type.getType();
            			if(!TypesChecker.checkTypes(((variables_scope)variables_stack.peek()).varType, firstAssign))
            			{
            				errors.add("line "+(ID3!=null?ID3.getLine():0)+": Type mismatch: cannot convert from "+((variables_scope)variables_stack.peek()).varType+" to "+firstAssign);
            			}
            		}
            		else
            		{
            			errors.add("line "+(ID3!=null?ID3.getLine():0)+": "+(ID3!=null?ID3.getText():null)+" cannot be resolved to a variable");
            		}
            	
            // D:\\Projects\\Yapis\\StrLang\\src\\grammar\\StrLang.g:165:2: ( ( PLUS_OP | MINUS_OP ) secondAssign= spec_type )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( ((LA9_0>=PLUS_OP && LA9_0<=MINUS_OP)) ) {
                    alt9=1;
                }

